--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Book</title>
+    <title>Echoes Of A Dying Star</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="assets/cover-icon.jpg" />
 </head>
 
 <body>
@@ -62,11 +64,58 @@
         <!-- Pair 4: Pages 7 & 8 -->
         <div class="page-pair">
             <section class="book-page text-page">
+                <h1>Oxygen Level: 73%</h1>
+                <p>A sudden thought of his family gripped him. Would he ever see them again? The question lingered,
+                    heavy and unresolved.</p>
+            </section>
+            <section class="book-page image-page">
+                <img src="assets/page8.png" alt="Illustration" />
+            </section>
+        </div>
+
+        <!-- Pair 5: Pages 9 & 10 -->
+        <div class="page-pair">
+            <section class="book-page text-page">
+                <h1>Oxygen Level: 71%</h1>
+                <p>The sorrow he felt for losing them was as boundless and infinite as the universe that now cradled him
+                    on his final journey.</p>
+            </section>
+            <section class="book-page image-page">
+                <img src="assets/page10.png" alt="Illustration" />
+            </section>
+        </div>
+
+        <!-- Pair 6: Pages 11 & 12 -->
+        <div class="page-pair">
+            <section class="book-page text-page">
+                <h1>Oxygen Level: 69%</h1>
+                <p>He knew his time was slipping away, each breath a whispered farewell to the life he once knew.</p>
+            </section>
+            <section class="book-page image-page">
+                <img src="assets/page12.png" alt="Illustration" />
+            </section>
+        </div>
+
+        <!-- Pair 7: Pages 13 & 14 -->
+        <div class="page-pair">
+            <section class="book-page text-page">
+                <h1>Oxygen Level: 67%</h1>
+                <p>As he drifted among the stars, he marveled at the vastness of the universe, feeling his own smallness
+                    and fragility in a realm where humanity had no place to endure.</p>
+            </section>
+            <section class="book-page image-page">
+                <img src="assets/page14.png" alt="Illustration" />
+            </section>
+        </div>
+
+        <!-- Pair x: Pages x & x -->
+        <div class="page-pair">
+            <section class="book-page text-page">
                 <h1>Soon... </h1>
                 <p>(a new segment everyday)</p>
             </section>
             <section class="book-page image-page">
-                <img src="assets/page8.png" alt="Illustration" />
+                <img src="assets/page16.png" alt="Illustration" />
             </section>
         </div>
 
